@@ -110,8 +110,8 @@
                 <configuration>
                     <source>22</source>
                     <target>22</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
+
             </plugin>
         </plugins>
     </build>
